Fix spacing on the guide

--- a/app/assets/styles/_guide.scss
+++ b/app/assets/styles/_guide.scss
@@ -16,7 +16,6 @@
   font-family: $tertiary-font-family;
   font-size: 1.2em;
   font-weight: 800;
-  padding-bottom:2em;
   position:absolute;
   top:1.4em;
 }
@@ -147,6 +146,14 @@
    Userguide Main Content
    ========================================================================== */
 
+.page__main-pusher{
+  padding-top: 2.5em;
+}
+
+.page__aside-pusher{
+  padding-top: 4em;
+}
+
 .page__body{
   display: table-cell;
 }
@@ -172,8 +179,8 @@
     font-weight: 400;
     font-family: $secondary-font-family;
     font-size: 2em;
-    padding-top:1.5em;
     margin: 0;
+    line-height: 0.9em;
   }
 
   h4{
@@ -274,7 +281,7 @@ blockquote{
 
 hr{
   border: 1px solid #DDD;
-  margin: 0.25em 0;
+  margin: 0.6em 0 1em;
 }
 
 ol > li {
